多层json和语音文件夹

--- a/setting/color.styl
+++ b/setting/color.styl
@@ -1,10 +1,20 @@
+// 主颜色
 $main-color = #F5C1BB
+// 夜间模式主颜色
 $main-color-dark = rgba(245,193,187,0.9)
+// 副颜色
 $sub-color = #F5F0F2
+// 夜间模式副颜色
 $sub-color-dark = rgba(245, 240, 242,0.9)
+// 按钮文字颜色
 $btn-text-color = #5F505F
+// 控制栏文字颜色
 $title-color = #5F505F
+// 夜间模式控制栏文字颜色
 $title-color-dark = #999999
+// 控制栏按钮active颜色
 $icon-active-color = #ff9488
+// 按钮hover颜色
 $hover-color = #bbc5cf
+// 按钮active颜色
 $active-color = #93a3b3
